...
                        icon: Icons.card_giftcard,
                        text: 'Arkadaşına kahve hediye et',
                      ),
                      const Spacer(),
                      FilledButton(
                        onPressed: () => context.go(Routes.login),
                        child: const Text('Telefonla Devam Et'),
                      ),
                      const SizedBox(height: AppSpacing.md),
                    ],
                  ),
                ),
              ),
...
